# misdotfiles

./: .aliases  .bash_prompt  .gitignore  .gtkrc-2.0  .profile  .spacemacs  .tmux.conf  README.md  bootstrap.sh  brew.sh  cask.sh  cask.sh~  configurar_fortune.md  install-macos.sh  install.sh  osx-10.11-setup.md
.config/configstore/: update-notifier-npm.json
.config/fish/: config.fish  fish_history  fishd.14109fd95dbf
.config/gmic/: gimp_update169.gmic
.config/gtk-2.0/: gtkfilechooser.ini
.config/inkscape/: preferences.xml
.config/mc/: ini
.config/octave/: qt-settings
.config/ranger/: bookmarks  history  rc.conf
.config/robomongo/: robomongo.json
.config/tox/: tox_save.tox  utox_save
.config/wireshark/: recent  recent_common
.config/xbuild/: monodroid-config.xml  pkgconfig-cache-2.xml
.config/xm1/: texmaker.ini  texmakerapp.ini
.emacs.d/: lramirez.org  smex-items  starter-kit-latex.org
.emacs.d/backups/: !Users!lramirez!.emacs.d!ido.last~
.pandoc/css/: style.css
.pandoc/makefile/: Makefile
.pandoc/marked/: panmarked.sh
.pandoc/templates/: complex-article.xelatex  default.revealjs  latex.template  simple-article.xelatex  template-revealjs-web.html  template-revealjs.html
.themes/LionGTKTheme/: README~
.themes/Sonar/: AUTHORS  index.theme
.themes/Sonar/metacity-1/: Makefile  Makefile.am  Makefile.in  metacity-theme-1.xml
.vim_runtime/temp_dirs/: yankring_history_v2.txt
config/: harvey  spacemacs.sh
config/fonts/: fonts.dir  fonts.list  fonts.scale
config/mutt/: muttrc
otros_config/: dotmuttrc  dottmux.conf
(+290 files in other folders)
