metacity_icons = \
	icon_close.png \
	icon_close_u.png \
	icon_maximize.png \
	icon_maximize_u.png \
	icon_minimize.png \
	icon_minimize_u.png \
	icon_restore.png \
	icon_restore_u.png \
	stripes.png

metacity_themedir = $(themedir)/metacity-1
metacity_theme_DATA = \
	metacity-theme-1.xml \
	$(metacity_icons)

EXTRA_DIST = metacity-theme-1.xml $(metacity_icons)
